--- a/src/app/navigationpages/bio/bio.component.html
+++ b/src/app/navigationpages/bio/bio.component.html
@@ -2,13 +2,19 @@
 
 <div class="row">
     <div class="col-lg-3">
-        <!-- <img class="img-fluid rounded mb-4" src="assets/images/zimcke.jpg" alt="Me"> -->
     </div>
     <div class="col-lg-9">
-        
         <h3 class="mb-3">How I grew up</h3>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-3">
+        <a href="assets/images/zillekeshoeve.jpg"><img class="img-fluid rounded mb-4" src="assets/images/zillekeshoeve.jpg" alt="Zillekeshoeve"></a>
+        1992, <i>Van Asberghof tot Zandvoorthoeve: Hoevenamen in de Zuiderkempen</i>, <a href="assets/images/zillekeshoeve.pdf">p.28</a>.
+    </div>
+    <div class="col-lg-9">
         <p class="p-spaced">
-            I grew up on an isolated farm in Belgium that carries the name Zillekeshoeve. 
+            I grew up on an isolated farm in Belgium that carries the name <a href="assets/images/zillekeshoeve.pdf">Zillekeshoeve</a>. 
             My maternal grandparents moved there in 1949 (after the <i>liberation</i>). 
             At that time there was no electricity nor running water for several years. The name stems from a <i>Zil</i>, 
             an old, local unit for measuring farming land. One Zil measures the area of land that one farmer can plow by himself
@@ -20,11 +26,11 @@
             My father is an experienced maker and DIYer. Needless to say, I grew up in a family that encouraged me to persue 
             a career in STEM. In fact, as a 7-year old, my dad let me sort out 
             his diodes by colour bands in his garage lab when I was bored... I had absolutely no clue what was going on, 
-            but being surrounded by all these little components somehow triggered my curiosity. My mother was introduced me to the joy of
+            but being surrounded by all these little components somehow triggered my curiosity. My mother introduced me to the joy of
             playing music and learning a new language, hence my fascination for Chinese in recent years.
         </p>
-
-
     </div>
 </div>
+
+
 
